Background and Card.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,12 @@
     <script defer src="./index.js"></script>
   </head>
   <body>
-    <h1>Article Preview Component</h1>
+    <main class="main">
+      <article class="card">
+        <div class="card__header"></div>
+        <div class="card__body"></div>
+        <div class="card__footer"></div>
+      </article>
+    </main>
   </body>
 </html>
