--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,45 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      href="./images/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <title>Article Preview Component</title>
     <script defer src="./index.js"></script>
   </head>
   <body>
     <main class="main">
       <article class="card">
-        <div class="card__header"></div>
-        <div class="card__body"></div>
-        <div class="card__footer"></div>
+        <div class="card__header">
+          <img class="card__img" src="./images/drawers.jpg" alt="drawers" />
+        </div>
+        <div class="card__body">
+          <h1 class="card__title">
+            Shift the overall look and feel by adding these wonderful touches to
+            furniture in your home
+          </h1>
+          <p class="card__description">
+            Ever been in a room and felt like something was missing? Perhaps it
+            felt slightly bare and uninviting. I’ve got some simple tips to help
+            you make any room feel complete.
+          </p>
+        </div>
+        <ul class="card__footer">
+          <li class="class__item">
+            <img src="./images/avatar-michelle.jpg" alt="avatar-michelle" />
+          </li>
+          <li class="class__item">
+            <span class="card__name">Michelle Appleton</span>
+            <span class="card__date">28 Jun 2020</span>
+          </li>
+          <li class="class__item">
+            <button>
+              <img src="./images/icon-share.svg" alt="icon-share" />
+            </button>
+          </li>
+        </ul>
       </article>
     </main>
   </body>
