--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -32,21 +32,21 @@
             felt slightly bare and uninviting. I’ve got some simple tips to help
             you make any room feel complete.
           </p>
+          <ul class="card__footer">
+            <li class="card__item">
+              <img src="./images/avatar-michelle.jpg" alt="avatar-michelle" />
+            </li>
+            <li class="card__item">
+              <span class="card__name">Michelle Appleton</span>
+              <span class="card__date">28 Jun 2020</span>
+            </li>
+            <li class="card__item">
+              <button class="card__btn">
+                <img src="./images/icon-share.svg" alt="icon-share" />
+              </button>
+            </li>
+          </ul>
         </div>
-        <ul class="card__footer">
-          <li class="class__item">
-            <img src="./images/avatar-michelle.jpg" alt="avatar-michelle" />
-          </li>
-          <li class="class__item">
-            <span class="card__name">Michelle Appleton</span>
-            <span class="card__date">28 Jun 2020</span>
-          </li>
-          <li class="class__item">
-            <button>
-              <img src="./images/icon-share.svg" alt="icon-share" />
-            </button>
-          </li>
-        </ul>
       </article>
     </main>
   </body>
