--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,11 @@
           </p>
           <ul class="card__footer">
             <li class="card__item">
-              <img src="./images/avatar-michelle.jpg" alt="avatar-michelle" />
+              <img
+                class="card__footerImg"
+                src="./images/avatar-michelle.jpg"
+                alt="avatar-michelle"
+              />
             </li>
             <li class="card__item">
               <span class="card__name">Michelle Appleton</span>
@@ -42,7 +46,12 @@
             </li>
             <li class="card__item">
               <button class="card__btn">
-                <img src="./images/icon-share.svg" alt="icon-share" />
+                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
+                  <path
+                    fill="#6E8098"
+                    d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"
+                  />
+                </svg>
               </button>
             </li>
           </ul>
