--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
               <span class="card__date">28 Jun 2020</span>
             </li>
             <li class="card__item">
-              <button class="card__btn">
+              <button id="card__btn" class="card__btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
                   <path
                     fill="#6E8098"
@@ -56,7 +56,7 @@
             </li>
           </ul>
         </div>
-        <div class="active">
+        <div id="active" class="card__share">
           <ul class="active__list">
             <li class="active__item">
               <p class="active__description">Share</p>
@@ -104,14 +104,14 @@
               </a>
             </li>
             <li class="active__item">
-              <a href="#" class="active__link active__link--share">
+              <button id="active__btn" class="active__btn">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
                   <path
                     fill="#ffffff"
                     d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"
                   />
                 </svg>
-              </a>
+              </button>
             </li>
           </ul>
         </div>
