--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,10 @@
   <body>
     <main class="main">
       <article class="card">
-        <div class="card__header">
+        <header class="card__header">
           <img class="card__img" src="./images/drawers.jpg" alt="drawers" />
-        </div>
-        <div class="card__body">
+        </header>
+        <section class="card__body">
           <h1 class="card__title">
             Shift the overall look and feel by adding these wonderful touches to
             furniture in your home
@@ -32,12 +32,12 @@
             felt slightly bare and uninviting. I’ve got some simple tips to help
             you make any room feel complete.
           </p>
-          <ul class="card__footer">
+          <ul class="card__list">
             <li class="card__item">
               <img
-                class="card__footerImg"
+                class="card__listImg"
                 src="./images/avatar-michelle.jpg"
-                alt="avatar-michelle"
+                alt="michelle appleton"
               />
             </li>
             <li class="card__item">
@@ -55,8 +55,8 @@
               </button>
             </li>
           </ul>
-        </div>
-        <div id="active" class="card__share">
+        </section>
+        <footer id="active" class="card__footer">
           <ul class="active__list">
             <li class="active__item">
               <p class="active__description">Share</p>
@@ -114,7 +114,7 @@
               </button>
             </li>
           </ul>
-        </div>
+        </footer>
       </article>
     </main>
   </body>
