Adding some animations.

--- a/src/index.html
+++ b/src/index.html
@@ -56,12 +56,12 @@
             </li>
           </ul>
         </section>
-        <footer id="active" class="card__footer">
+        <div id="active" class="card__active">
           <ul class="active__list">
             <li class="active__item">
               <p class="active__description">Share</p>
             </li>
-            <li class="active__item">
+            <li class="active__item active__item--social">
               <a
                 href="https://www.facebook.com/"
                 target="_blank"
@@ -75,7 +75,7 @@
                 </svg>
               </a>
             </li>
-            <li class="active__item">
+            <li class="active__item active__item--social">
               <a
                 href="https://twitter.com"
                 target="_blank"
@@ -89,7 +89,7 @@
                 </svg>
               </a>
             </li>
-            <li class="active__item">
+            <li class="active__item active__item--social">
               <a
                 href="https://www.pinterest.com/"
                 target="_blank"
@@ -114,7 +114,7 @@
               </button>
             </li>
           </ul>
-        </footer>
+        </div>
       </article>
     </main>
   </body>
