--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="shortcut icon"
-      href="./images/favicon-32x32.png"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="./images/favicon-32x32.png" type="images/png" />
     <title>Article Preview Component</title>
     <script defer src="./index.js"></script>
   </head>
@@ -22,7 +18,7 @@
         <header class="card__header">
           <img class="card__img" src="./images/drawers.jpg" alt="drawers" />
         </header>
-        <section class="card__body">
+        <div class="card__body">
           <h2 class="card__title">
             Shift the overall look and feel by adding these wonderful touches to
             furniture in your home
@@ -50,6 +46,7 @@
                 class="card__btn"
                 type="button"
                 name="button toogle"
+                aria-label="button toogle"
               >
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
                   <path
@@ -60,7 +57,7 @@
               </button>
             </li>
           </ul>
-        </section>
+        </div>
         <div id="active" class="card__active">
           <ul class="active__list">
             <li class="active__item">
@@ -93,16 +90,6 @@
                 <img src="./images/icon-pinterest.svg" alt="pinterest link" />
               </a>
             </li>
-            <!-- <li class="active__item"> -->
-            <!--   <button id="active__btn" class="active__btn" name="button toogle"> -->
-            <!--     <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"> -->
-            <!--       <path -->
-            <!--         fill="#ffffff" -->
-            <!--         d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z" -->
-            <!--       /> -->
-            <!--     </svg> -->
-            <!--   </button> -->
-            <!-- </li> -->
           </ul>
         </div>
       </article>
